--- a/index.html
+++ b/index.html
@@ -6,11 +6,70 @@
     <body>
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+        <style>
+            table {
+              border-collapse: collapse;
+              width: 100%;
+              font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            }
+            
+            th, td {
+              padding: 8px;
+              text-align: center;
+              border-bottom: 1px solid #ddd;
+            }
+            
+            tr:hover {background-color: lightgrey;}
+        </style>
+        <table>
+            <tr>
+                <td>
+                    Amount
+                </td>
+                <td>
+                    <input type="number" id="principal">
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>
+                    Rate
+                </td>
+                <td>
+                    <input type="range" min="1" max="100" value="5" class="slider" id="rate" onchange="updateSlider()">
+                </td>
+                <td>
+                    <input type="text" id="sliderRate"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    No. of Years
+                </td>
+                <td>
+                    <select name="years" id="years">
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                        <option value="20">20</option>
+                    </select>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <button id="btnCompute" onclick="compute()">Compute Interest</button>
+                </td>
+            </tr> 
 
-        <button onclick="compute()">Compute</button>
+        </table>
+
+        <br><br><br>
+        <div id="computedInterest"></div>
+
+        <br><br><br>
+        <footer>
+            <p>(c) Everyone Can Get Rich</p>
+        </footer>
     </body>
 </html>
