--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <br><br><br>
         <footer>
-            <p>(c) Everyone Can Get Rich</p>
+            <p>&copy Everyone Can Get Rich</p>
         </footer>
     </body>
 </html>
