--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     Rate
                 </td>
                 <td>
-                    <input type="range" min="1" max="100" value="5" class="slider" id="rate" onchange="updateSlider()">
+                    <input type="range" min="1" max="20" step="0.5" value="5" class="slider" id="rate" onchange="updateSlider()">
                 </td>
                 <td>
                     <input type="text" id="sliderRate"/>
